--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.1",
+    "concat-stream": "^1.6.0",
     "express": "^4.15.4",
     "mongodb": ">0.0.1",
-    "socket.io": ">0.0.1",
-    "q": ">0.0.1"
+    "q": ">0.0.1",
+    "socket.io": "^2.0.3"
   }
 }
